<resources>
    <string name="app_name">Qlish</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_fragment_name">Preferences</string>
    <string name="profile_fragment_name">Profile</string>
    <string name="question">I ___ not translate this text yesterday. ___ you help me to translate it tonight?</string>
    <string name="option_a_label">A. </string>
    <string name="option_b_label">B. </string>
    <string name="option_c_label">C. </string>
    <string name="option_d_label">D. </string>
    <string name="option_e_label">E. </string>
    <string name="question_index_label">Question 1/15</string>
    <string name="option_a_text">could/can</string>
    <string name="option_b_text">can/can</string>
    <string name="option_c_text">may/may</string>
    <string name="option_d_text">had to/could</string>
    <string name="option_e_text">can/must</string>
    <string name="text_previous">Previous</string>
    <string name="text_next">Next</string>
    <string name="text_submit">Submit</string>
    <string name="action_home_text">Home</string>
    <string name="action_take_a_test_text">Test</string>
    <string name="action_profile_text">Profile</string>
    <string name="action_settings_text">Settings</string>
    <string name="text_takeATest">Take a Test</string>
    <string name="text_test_history">Test History</string>
    <string name="text_word_of_the_day">Word of the Day</string>
    <string name="text_daily_challenge">Daily Challenge</string>
    <string name="text_grammar_vocabulary_tips"><![CDATA[Grammar & Vocabulary Tips]]></string>
    <string name="text_progress_performance_overview"><![CDATA[Progress & Performance Overview]]></string>
    <string name="hello_user_text">Hello, user</string>
    <string name="text_grammar">Grammar</string>
    <string name="text_vocabulary">Vocabulary</string>
    <string name="text_random">Random</string>
    <string name="option_1_generic">option 1</string>
    <string name="option_2_generic">option 2</string>
    <string name="option_3_generic">option 3</string>
    <string name="option_4_generic">option 4</string>
    <string name="text_choose_test_count">Choose question count</string>
    <string name="text_start_test">Start Test</string>
    <string name="text_choose_test_level">Choose test level</string>
    <string name="label_fragment_dashboard">Dashboard</string>
    <string name="label_fragment_onboarding">Welcome</string>
    <string name="label_fragment_signIn">Sign in</string>
    <string name="label_fragment_settings">Settings</string>
    <string name="label_fragment_test">Test</string>
    <string name="label_fragment_profile">Profile</string>
    <string name="label_fragment_takeATest">Take a test</string>
    <string name="label_fragment_signUp">Sign up</string>
    <string name="label_fragment_testHistory">Test history</string>
    <string name="label_fragment_dashboard_dailyWord">Word of the day</string>
    <string name="label_fragment_dailyTips">Daily tips</string>
    <string name="label_fragment_dailyTasks">Daily challenge</string>
    <string name="label_fragment_progress_overview">Progress overview</string>
    <string name="label_fragment_question_config">Test preferences</string>
    <string name="question_count_label">Question Count</string>
    <string name="question_level_label">Question Level</string>
    <string name="question_topic_label">Question Topic</string>
    <string name="dropdown_arrow_content_desc">dropdown arrow</string>
    <string name="text_choose_test_topic">Choose test topic</string>

    <string-array name="question_count_items">
        <item>15</item>
        <item>25</item>
        <item>35</item>
        <item>50</item>
    </string-array>

    <string-array name="question_level_items">
        <item>Elementary</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>

    <string-array name="question_topic_item">
        <item>Parts of Speech</item>
        <item>Sentence Completion</item>
        <item>Tenses</item>
        <item>Antonyms</item>
        <item>Synonyms</item>
        <item>Paragraph</item>
        <item>Phrasal Verbs</item>
        <item>Reading Comprehension</item>

    </string-array>

</resources>