<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.qlish.ui.TakeATest"
    android:background="@color/logo_fill">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/action_grammar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/action_vocabulary"        style="@style/largeElevatedCardStyle"
        app:cardBackgroundColor="#B53F51">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_mono"
            android:text="@string/text_grammar"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/logo_fill"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/action_vocabulary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/action_grammar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/action_random"
        style="@style/largeElevatedCardStyle"
        app:cardBackgroundColor="#292A6B">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_mono"
            android:text="@string/text_vocabulary"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/logo_fill"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/action_random"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/action_vocabulary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/largeElevatedCardStyle"
        app:cardBackgroundColor="#2B6B29">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_mono"
            android:text="@string/text_random"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/logo_fill"/>
    </com.google.android.material.card.MaterialCardView>






</androidx.constraintlayout.widget.ConstraintLayout>